--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "luxon": "^1.27.0",
     "ng2-charts": "^3.0.0-rc.4",
     "ngx-toastr": "14.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.0.1",
     "rxjs": "6.6.7",
     "tslib": "^2.0.3",
     "zone.js": "~0.11.4"
