--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "adminlte": {
+        "Console_Lydec": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:component": {
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/adminlte",
+                        "outputPath": "dist/Console_Lydec",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -29,11 +29,16 @@
                           }],
                         "styles": [
                           "src/styles.scss",
-                          "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                          "node_modules/ngx-toastr/toastr.css",
+                          "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                          "node_modules/primeicons/primeicons.css",
+                          "node_modules/primeng/resources/themes/saga-blue/theme.css",
+                          "node_modules/primeng/resources/primeng.min.css"
                         ],
                         "scripts": [
                           "node_modules/jquery/dist/jquery.min.js",
-                          "node_modules/bootstrap/dist/js/bootstrap.js"
+                          "node_modules/bootstrap/dist/js/bootstrap.js",
+                          "node_modules/chart.js/dist/Chart.js"
                         ],
                         "vendorChunk": true,
                         "extractLicenses": false,
@@ -75,18 +80,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "adminlte:build"
+                        "browserTarget": "Console_Lydec:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "adminlte:build:production"
+                            "browserTarget": "Console_Lydec:build:production"
                         }
                     }
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                        "browserTarget": "adminlte:build"
+                        "browserTarget": "Console_Lydec:build"
                     }
                 },
                 "test": {
@@ -111,18 +116,18 @@
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
                         "protractorConfig": "e2e/protractor.conf.js",
-                        "devServerTarget": "adminlte:serve"
+                        "devServerTarget": "Console_Lydec:serve"
                     },
                     "configurations": {
                         "production": {
-                            "devServerTarget": "adminlte:serve:production"
+                            "devServerTarget": "Console_Lydec:serve:production"
                         }
                     }
                 }
             }
         }
     },
-    "defaultProject": "adminlte",
+    "defaultProject": "Console_Lydec",
     "cli": {
         "analytics": "43a7ce40-5fb9-4a0d-8b40-b48fc0426e9d",
         "defaultCollection": "@angular-eslint/schematics"
