itinerary to any poste

--- a/package.json
+++ b/package.json
@@ -37,10 +37,16 @@
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
     "core-js": "3.8.0",
+    "google-maps": "^4.3.3",
+    "i": "^0.3.6",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
+    "leaflet-routing-machine": "^3.2.12",
+    "leaflet.fullscreen": "^2.0.0",
     "luxon": "^1.27.0",
+    "mapbox-gl": "^2.4.0",
     "ngx-toastr": "^14.0.0",
+    "npm": "^7.20.5",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.1",
     "rxjs": "6.6.7",
