--- a/angular.json
+++ b/angular.json
@@ -28,12 +28,13 @@
                             "output": "./assets"
                           }],
                         "styles": [
+                          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                           "src/styles.scss",
                           "node_modules/ngx-toastr/toastr.css",
                           "node_modules/bootstrap/dist/css/bootstrap.min.css",
                           "node_modules/primeicons/primeicons.css",
                           "node_modules/primeng/resources/themes/saga-blue/theme.css",
-                          "node_modules/primeng/resources/primeng.min.css"
+                            "node_modules/primeng/resources/primeng.min.css"
                         ],
                         "scripts": [
                           "node_modules/jquery/dist/jquery.min.js",
@@ -102,7 +103,7 @@
                         "tsConfig": "tsconfig.spec.json",
                         "karmaConfig": "karma.conf.js",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.scss"],
+                        "styles": ["./node_modules/@angular/material/prebuilt-themes/indigo-pink.css", "src/styles.scss"],
                         "scripts": []
                     }
                 },
