--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/core": "12.0.2",
     "@angular/forms": "12.0.2",
     "@angular/localize": "12.0.2",
+    "@angular/material": "^12.2.3",
+    "@angular/material-moment-adapter": "^12.2.3",
     "@angular/platform-browser": "12.0.2",
     "@angular/platform-browser-dynamic": "12.0.2",
     "@angular/router": "12.0.2",
